@@ -71,6 +71,8 @@ Denton:
 - It looks like PhotoCD support was disabled.  Why?
 - Request compressed texture data in ilutGLSetTex2D?
 - Get il_vtf.c to do less memory allocation.  Just use the precache function.
+- Should iluScale act on faces and mipmaps?
+- Change how mipmaps are stored (do not use Next pointer in ILimage).
 
 Matej:
 - Make a test suite
